--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   provider: ^6.1.0
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
