--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,16 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.0
   font_awesome_flutter: ^10.12.0
+  flex_color_scheme: ^8.4.0
+  flutter_riverpod: ^2.6.1
+  go_router: ^17.0.1
+  freezed_annotation: ^3.1.0
+  flutter_animate: ^4.5.2
+  shimmer: ^3.0.0
+  dio: ^5.9.1
+  json_serializable: ^6.12.0
+  build_runner: ^2.10.5
+  freezed: ^3.2.4
 
 dev_dependencies:
   flutter_test:
