--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^17.0.1
   freezed_annotation: ^3.1.0
+  qr_flutter: ^4.0.0
+  path_provider: ^2.0.15
+  mobile_scanner: ^4.0.0
   flutter_animate: ^4.5.2
   shimmer: ^3.0.0
   dio: ^5.9.1
